@@ -1,5 +1,9 @@
 ================================ Next release ================================
 
+Features:
+    - Plugin-loaded services: ``IPipedService``-plugins, with a helper
+      ``PipedService``-base class in ``piped.service``.
+
 Bug fixes:
     - ``piped.graph`` now be compatible with ``networkx`` 1.7
     - ``piped.util.wait_for_first`` will now errback with the actual failure, and
